[build-system]
requires = ["setuptools>=41.0.0", "wheel", "setuptools_rust>=0.10.2"]
build-backend = "setuptools.build_meta"

[tool.poetry.dev-dependencies]
setuptools-rust = "^0.12.1"
pytest = "^6.2.2"
black = "^20.8b1"
isort = "^5.6.4"
ipython = "^7"
pytest-benchmark = {extras = ["histogram"], version = "^3.4.1"}
PyYAML = "^5.4.1"
