[metadata]
name = rustyaml
version = 0.1.1
description = Python bindings for rust-yaml
long_description = file: readme.md
long_description_content_type = text/markdown
author = Will Eaton
author_email = me@wseaton.com
url = https://github.com/wseaton/rustyaml
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Rust
    License :: OSI Approved :: MIT License

[options]
packages = rustyaml
python_requires = >=3.6.0,<4.0
zip_safe = False
